fix for bug #407373:  if ExpireItems() fails, don't fire the timer again. r=dietrich, a=schrep for m10